--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = wap, tests
+files = fourget, tests
 check_untyped_defs = True
 follow_imports_for_stubs = True
 disallow_any_generics = True
@@ -19,9 +19,6 @@ warn_unused_ignores = True
 warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_decorators = True
-
-[mypy-uvicorn]
-ignore_missing_imports = True
 
 [mypy-aiofiles]
 ignore_missing_imports = True
