--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ mypy = "^0.910"
 pytest = "^6.2.5"
 isort = "^5.9.3"
 flake8 = "^4.0.1"
+pydocstyle = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -32,3 +33,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 fourget = "fourget.__main__:app"
+
+[pydocstyle]
+ignore = "D444"
