--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^6.2.5"
 isort = "^5.9.3"
 flake8 = "^4.0.1"
 pydocstyle = "^6.1.1"
+pylint = "^2.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
