--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,11 @@ isort = "^5.9.3"
 flake8 = "^4.0.1"
 pydocstyle = "^6.1.1"
 pylint = "^2.11.1"
+bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
 
 [tool.poetry.scripts]
 fourget = "fourget.__main__:app"
