--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Get pip cache dir
         id: pip-cache
         run: |
@@ -72,7 +72,7 @@ jobs:
     needs: check
     strategy:
       matrix:
-        pyver: [3.10]
+        pyver: ["3.10"]
         os: [ubuntu, macos, windows]
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
@@ -132,7 +132,7 @@ jobs:
       - name: Setup Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Get pip cache dir
         id: pip-cache
         run: |
