--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,3 +6,6 @@ message = Bump to version {new_version}
 tag_name = {new_version}
 
 [bumpversion:file:pyproject.toml]
+# only look for the version on the line that looks like "version = 1.2.3"
+# not having this caused false positived once on a dependency version elsewhere in the file
+search = version = "{current_version}"
