Add proper replace line to bump2version config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,3 +9,4 @@ tag_name = {new_version}
 # only look for the version on the line that looks like "version = 1.2.3"
 # not having this caused false positived once on a dependency version elsewhere in the file
 search = version = "{current_version}"
+replace = version = "{new_version}"
