--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ aiofiles = "^0.7.0"
 tqdm = "^4.62.3"
 arrow = "^1.2.0"
 yarl = "^1.7.0"
+rich = "^10.16.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
